Closed Bug 173278 Opened 22 years ago Closed 22 years ago

Should not prefetch <link rel="alternate">

Categories

(Core :: Networking: HTTP, defect, P1)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED
mozilla1.2beta

People

(Reporter: bugzilla, Assigned: darin.moz)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

<link rel="alternate" ...> is used to provide alternate versions (for different
media types, devices, languages, etc.) of the same document.  Currently (Win2K
build 2002100804) the <link> prefetching (bug 12274) prefetches these
alternates.  There is no reason to prefetch multiple versions of the same
document; there is little chance the user will visit these alternate pages, and
it increases server load significantly.
For you, darin.
Assignee: gordon → darin
Component: Networking: Cache → Networking: HTTP
QA Contact: tever → httpqa
very odd... i'm able to repro this myself.  investigating.
Severity: normal → major
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla1.2beta
this is even worse than reported.  we prefetch rel="anything" including
stylesheet!  upping severity of this bug.
Severity: major → critical
Priority: P2 → P1
stupid typo!!
Comment on attachment 102223 [details] [diff] [review]
v1 patch - fixes typo

r=gordon
Attachment #102223 - Flags: review+
Comment on attachment 102223 [details] [diff] [review]
v1 patch - fixes typo

doh! :)
sr=alecf
Attachment #102223 - Flags: superreview+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verified trunk - winNT4, linux rh6, mac osX - 10/10/02 builds
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: