fixes bug 173278 "Should not prefetch <link rel="alternate">" r=gordon sr=alecf